module.jai


// Texture drawing functions
DrawTexture       :: (texture: Texture2D, posX: s32, posY: s32, tint: Color) #foreign raylib;
DrawTextureV      :: (texture: Texture2D, position: Vector2, tint: Color) #foreign raylib;
DrawTextureEx     :: (texture: Texture2D, position: Vector2, rotation: float32, scale: float32, tint: Color) #foreign raylib;
DrawTextureRec    :: (texture: Texture2D, sourceRec: Rectangle, position: Vector2, tint: Color) #foreign raylib;
DrawTextureQuad   :: (texture: Texture2D, tiling: Vector2, offset: Vector2, quad: Rectangle, tint: Color) #foreign raylib;
DrawTexturePro    :: (texture: Texture2D, sourceRec: Rectangle, destRec: Rectangle, origin: Vector2, rotation: float32, tint: Color) #foreign raylib;
DrawTextureNPatch :: (texture: Texture2D, nPatchInfo: NPatchInfo, destRec: Rectangle, origin: Vector2, rotation: float32, tint: Color) #foreign raylib;

// Image/Texture misc functions
GetPixelDataSize  :: (width: s32, height: s32, format: s32) -> s32 #foreign raylib;

CharInfo :: struct {
    value: s32;
    offsetX: s32;
    offsetY: s32;
    advanceX: s32;
    image: Image;
}

// Font loading/unloading functions
GetFontDefault    :: () -> Font #foreign raylib;
LoadFont          :: (fileName: *u8) -> Font #foreign raylib;
LoadFontEx        :: (fileName: *u8, fontSize: s32, fontChars: *s32, charsCount: s32) -> Font #foreign raylib;
LoadFontFromImage :: (image: Image, key: Color, firstChar: s32) -> Font #foreign raylib;
LoadFontData      :: (fileName: *u8, fontSize: s32, fontChars: *s32, charsCount: s32, type: s32) -> *CharInfo #foreign raylib;
GenImageFontAtlas :: (chars: *CharInfo, recs: **Rectangle, charsCount: s32, fontSize: s32, padding: s32, packMethod: s32) -> Image #foreign raylib;
UnloadFont        :: (font: Font) #foreign raylib;

// Text drawing functions
DrawFPS           :: (posX: s32, posY: s32) #foreign raylib;
DrawText          :: (text: *u8, posX: s32, posY: s32, fontSize: s32, color: Color) #foreign raylib;
DrawTextEx        :: (font: Font, text: *u8, position: Vector2, fontSize: float32, spacing: float32, tint: Color) #foreign raylib;
DrawTextRec       :: (font: Font, text: *u8, rec: Rectangle, fontSize: float32, spacing: float32, wordWrap: bool, tint: Color) #foreign raylib;
DrawTextRecEx     :: (font: Font, text: *u8, rec: Rectangle, fontSize: float32, spacing: float32, wordWrap: bool, tint: Color, selectStart: s32, selectLength: s32, selectTint: Color, selectBackTint: Color) #foreign raylib;
DrawTextCodepoint :: (font: Font, codepoint: s32, position: Vector2, scale: float32, tint: Color) #foreign raylib;

// Text misc. functions
MeasureText   :: (text: *u8, fontSize: s32) -> s32 #foreign raylib;
MeasureTextEx :: (font: Font, text: *u8, fontSize: float32, spacing: float32) -> Vector2 #foreign raylib;
GetGlyphIndex :: (font: Font, codepoint: s32) -> s32 #foreign raylib;

// Text strings management functions (no utf8 strings, only byte chars)
TextCopy      :: (dst: *u8, src: *u8) -> s32 #foreign raylib;
TextIsEqual   :: (text1: *u8, text2: *u8) -> bool #foreign raylib;
TextLength    :: (text: *u8) -> u32 #foreign raylib;
TextFormat    :: (text: *u8, va_list: *void) -> *u8 #foreign raylib;
TextSubtext   :: (text: *u8, position: s32, length: s32) -> *u8 #foreign raylib;
TextReplace   :: (text: *u8, replace: *u8, by: *u8) -> *u8 #foreign raylib;
TextInsert    :: (text: *u8, insert: *u8, position: s32) -> *u8 #foreign raylib;
TextJoin      :: (textList: **u8, count: s32, delimiter: *u8) -> *u8 #foreign raylib;
TextSplit     :: (text: *u8, delimiter: u8, count: *s32) -> **u8 #foreign raylib;
TextAppend    :: (text: *u8, append: *u8, position: *s32) #foreign raylib;
TextFindIndex :: (text: *u8, find: *u8) -> s32 #foreign raylib;
TextToUpper   :: (text: *u8) -> *u8 #foreign raylib;
TextToLower   :: (text: *u8) -> *u8 #foreign raylib;
TextToPascal  :: (text: *u8) -> *u8 #foreign raylib;
TextToInteger :: (text: *u8) -> s32 #foreign raylib;
TextToUtf8    :: (codepoints: *s32, length: s32) -> *u8 #foreign raylib;

// UTF8 text strings management functions
GetCodepoints      :: (text: *u8, count: *s32) -> *u32 #foreign raylib;
GetCodepointsCount :: (text: *u8) -> u32 #foreign raylib;
GetNextCodepoint   :: (text: *u8, bytesProcessed: *s32) -> u32 #foreign raylib;
CodepointToUtf8    :: (codepoint: s32, byteLength: *s32) -> *u8 #foreign raylib;

// Basic geometric 3D shapes drawing functions
DrawLine3D        :: (startPos: Vector3, endPos: Vector3, color: Color) #foreign raylib;
DrawPoint3D       :: (position: Vector3, color: Color) #foreign raylib;
DrawCircle3D      :: (center: Vector3, radius: float32, rotationAxis: Vector3, rotationAngle: float32, color: Color) #foreign raylib;
DrawCube          :: (position: Vector3, width: float32, height: float32, length: float32, color: Color) #foreign raylib;
DrawCubeV         :: (position: Vector3, size: Vector3, color: Color) #foreign raylib;
DrawCubeWires     :: (position: Vector3, width: float32, height: float32, length: float32, color: Color) #foreign raylib;
DrawCubeWiresV    :: (position: Vector3, size: Vector3, color: Color) #foreign raylib;
DrawCubeTexture   :: (texture: Texture2D, position: Vector3, width: float32, height: float32, length: float32, color: Color) #foreign raylib;
DrawSphere        :: (centerPos: Vector3, radius: float32, color: Color) #foreign raylib;
DrawSphereEx      :: (centerPos: Vector3, radius: float32, rings: s32, slices: s32, color: Color) #foreign raylib;
DrawSphereWires   :: (centerPos: Vector3, radius: float32, rings: s32, slices: s32, color: Color) #foreign raylib;
DrawCylinder      :: (position: Vector3, radiusTop: float32, radiusBottom: float32, height: float32, slices: s32, color: Color) #foreign raylib;
DrawCylinderWires :: (position: Vector3, radiusTop: float32, radiusBottom: float32, height: float32, slices: s32, color: Color) #foreign raylib;
DrawPlane         :: (centerPos: Vector3, size: Vector2, color: Color) #foreign raylib;
DrawRay           :: (ray: Ray, color: Color) #foreign raylib;
DrawGrid          :: (slices: s32, spacing: float32) #foreign raylib;

Mesh :: struct {
    vertexCount: s32;
    triangleCount: s32;
    vertices: *float32;
    texcoords: *float32;
    texcoords2: *float32;
    normals: *float32;
    tangents: *float32;
    colors: *u8;
    indices: *s16;
    animVertices: *float32;
    animNormals: *float32;
    boneIds: *s32;
    boneWeights: *float32;
    vaoId: u32;
    vboId: *u32;
}

Shader :: struct {
    id: u32;
    locs: *s32;
}

MaterialMap :: struct {
    texture: Texture2D;
    color: Color;
    value: float32;
}

Material :: struct {
    shader: Shader;
    maps: *MaterialMap;
    params: *float;
}

Transform :: struct {
    translation: Vector3;
    rotation: Quaternion;
    scale: Vector3;
}

RayHitInfo :: struct {
    hit: bool;
    distance: float32;
    position: Vector3;
    normal: Vector3;
}

BoneInfo :: struct {
    name: [32]u8;
    parent: s32;
}

BoundingBox :: struct {
    min, max: Vector3;
}

Model :: struct {
    transform: Matrix;
    meshCount: s32;
    meshes: *Mesh;
    materialCount: s32;
    materials: *Material;
    meshMaterial: *s32;
    boneCount: s32;
    bones: BoneInfo;
    bindPose: *Transform;
}

ModelAnimation :: struct {
    boneCount: s32;
    bones: *BoneInfo;
    frameCount: s32;
    framePoses: **Transform;
}

// Model loading/unloading functions
LoadModel         :: (fileName: *u8) -> Model #foreign raylib;
LoadModelFromMesh :: (mesh: Mesh) -> Model #foreign raylib;
UnloadModel       :: (model: Model) #foreign raylib;

// Mesh loading/unloading functions
LoadMeshes :: (fileName: *u8, meshCount: *s32) -> *Mesh #foreign raylib;
ExportMesh :: (mesh: Mesh, fileName: *u8) #foreign raylib;
UnloadMesh :: (mesh: Mesh) #foreign raylib;

// Material loading/unloading functions
LoadMaterials        :: (fileName: *u8, materialCount: *s32) -> *Material #foreign raylib;
LoadMaterialDefault  :: () -> Material #foreign raylib;
UnloadMaterial       :: (material: Material) #foreign raylib;
SetMaterialTexture   :: (material: *Material, mapType: s32, texture: Texture2D) #foreign raylib;
SetModelMeshMaterial :: (model: *Model, meshId: s32, materialId: s32) #foreign raylib;

// Model animations loading/unloading functions
LoadModelAnimations   :: (fileName: *u8, animsCount: *s32) -> *ModelAnimation #foreign raylib;
UpdateModelAnimation  :: (model: Model, anim: ModelAnimation, frame: s32) #foreign raylib;
UnloadModelAnimation  :: (anim: ModelAnimation) #foreign raylib;
IsModelAnimationValid :: (model: Model, anim: ModelAnimation) -> bool #foreign raylib;

// Mesh generation functions
GenMeshPoly       :: (sides: s32, radius: float32) -> Mesh #foreign raylib;
GenMeshPlane      :: (width: float32, length: float32, resX: s32, resZ: s32) -> Mesh #foreign raylib;
GenMeshCube       :: (width: float32, height: float32, length: float32) -> Mesh #foreign raylib;
GenMeshSphere     :: (radius: float32, rings: s32, slices: s32) -> Mesh #foreign raylib;
GenMeshHemiSphere :: (radius: float32, rings: s32, slices: s32) -> Mesh #foreign raylib;
GenMeshCylinder   :: (radius: float32, height: float32, slices: s32) -> Mesh #foreign raylib;
GenMeshTorus      :: (radius: float32, size: float32, radSeg: s32, sides: s32) -> Mesh #foreign raylib;
GenMeshKnot       :: (radius: float32, size: float32, radSeg: s32, sides: s32) -> Mesh #foreign raylib;
GenMeshHeightmap  :: (heightmap: Image, size: Vector3) -> Mesh #foreign raylib;
GenMeshCubicmap   :: (cubicmap: Image, cubeSize: Vector3) -> Mesh #foreign raylib;

// Mesh manipulation functions
MeshBoundingBox :: (mesh: Mesh) -> BoundingBox #foreign raylib;
MeshTangents    :: (mesh: *Mesh) #foreign raylib;
MeshBinormals   :: (mesh: *Mesh) #foreign raylib;

// Model drawing functions
DrawModel        :: (model: Model, position: Vector3, scale: float32, tint: Color) #foreign raylib;
DrawModelEx      :: (model: Model, position: Vector3, rotationAxis: Vector3, rotationAngle: float32, scale: Vector3, tint: Color) #foreign raylib;
DrawModelWires   :: (model: Model, position: Vector3, scale: float32, tint: Color) #foreign raylib;
DrawModelWiresEx :: (model: Model, position: Vector3, rotationAxis: Vector3, rotationAngle: float32, scale: Vector3, tint: Color) #foreign raylib;
DrawBoundingBox  :: (box: BoundingBox, color: Color) #foreign raylib;
DrawBillboard    :: (camera: Camera, texture: Texture2D, center: Vector3, size: float, tint: Color) #foreign raylib;
DrawBillboardRec :: (camera: Camera, texture: Texture2D, sourceRec: Rectangle, center: Vector3, size: float32, tint: Color) #foreign raylib;

// Collision detection functions
CheckCollisionSpheres     :: (centerA: Vector3, radiusA: float32, centerB: Vector3, radiusB: float32) -> bool #foreign raylib;
CheckCollisionBoxes       :: (box1: BoundingBox, box2: BoundingBox) -> bool #foreign raylib;
CheckCollisionBoxSphere   :: (box: BoundingBox, center: Vector3, radius: float32) -> bool #foreign raylib;
CheckCollisionRaySphere   :: (ray: Ray, center: Vector3, radius: float32) -> bool #foreign raylib;
CheckCollisionRaySphereEx :: (ray: Ray, center: Vector3, radius: float32, collisionPoint: *Vector3) -> bool #foreign raylib;
CheckCollisionRayBox      :: (ray: Ray, box: BoundingBox) -> bool #foreign raylib;
GetCollisionRayModel      :: (ray: Ray, model: Model) -> RayHitInfo #foreign raylib;
GetCollisionRayTriangle   :: (ray: Ray, p1: Vector3, p2: Vector3, p3: Vector3) -> RayHitInfo #foreign raylib;
GetCollisionRayGround     :: (ray: Ray, groundHeight: float32) -> RayHitInfo #foreign raylib;
